# plat2

./: CLAUDE.md  CLAUDE_ARCHIVE.md  CONCURRENCY_PLAN.md  Cargo.toml  ERROR_MESSAGES.md  FILE_SYSTEM.md  GC_OPTIMIZATIONS.md  GC_PLAN.md  SC_VS_CHANNELS.md  STDLIB_PLAN.md  STDLIB_PLAN_ARCHIVE.md  TODO.md  assert_correct.plat  assert_fail.plat  assert_test.plat  assert_test2.plat  basic_test.plat  comprehensive_class_test.plat  constructor_fix.txt  debug_discriminants.plat  debug_multiple_methods.plat  debug_simple_method.plat  minimal_generic_test.plat  simple_class_test.plat  simple_dict_test.plat  simple_list_test.plat  simple_method_test.plat  simple_test.plat  test_add_method.plat  test_basic_dict.plat  test_basic_inheritance.plat  test_cast.plat  test_channels.plat  test_class_add.plat  test_class_methods.plat  test_class_methods_simple.plat  test_complete_classes.plat  test_concurrent_basic.plat  test_concurrent_nested.plat  test_concurrent_scope.plat  (+67 more)
crates/plat-ast/: Cargo.toml
crates/plat-ast/src/: lib.rs
crates/plat-cli/: Cargo.toml
crates/plat-cli/src/: main.rs
crates/plat-cli/tests/: integration_test.rs
crates/plat-codegen/: Cargo.toml  test_stringify_simple.plat
crates/plat-codegen/src/: lib.rs
crates/plat-codegen/tests/: integration_test.rs
crates/plat-diags/: Cargo.toml
crates/plat-diags/src/: lib.rs
crates/plat-fmt/: Cargo.toml
crates/plat-fmt/src/: lib.rs  tests.rs
crates/plat-hir/: Cargo.toml
crates/plat-hir/src/: lib.rs  tests.rs
crates/plat-lexer/: Cargo.toml
crates/plat-lexer/src/: lib.rs  tests.rs  token.rs
crates/plat-modules/: Cargo.toml
crates/plat-modules/src/: lib.rs
crates/plat-parser/: Cargo.toml
crates/plat-parser/src/: lib.rs  tests.rs
crates/plat-runtime/: Cargo.toml  build.rs
crates/plat-runtime/src/: channel.rs  errors.rs  lib.rs  runtime.rs  tests.rs  types.rs
crates/plat-runtime/src/ffi/: array.rs  class.rs  conversions.rs  core.rs  dict.rs  env.rs  fs.rs  gc_bindings.rs  mod.rs  net.rs  process.rs  random.rs  set.rs  string.rs  time.rs
crates/plat-runtime/src/green_runtime/: mod.rs  scheduler.rs  scope.rs  task.rs  task_with_result.rs
crates/plat-runtime/tests/: green_runtime_test.rs
examples/: arithmetic.plat  boolean.plat  boolean_logic.plat  boolean_test.plat  complex_interpolation.plat  comprehensive_string_test.plat  control_flow.plat  debug_file_read.plat  debug_interpolation.plat  debug_result.plat  default_args.plat  default_args_simple.plat  dict_test.plat  error.plat  exit_code.plat  file_basic.plat  file_full_test.plat  file_io_test.plat  file_simple.plat  file_test.plat  file_test2.plat  file_test_medium.plat  float_test.plat  fs_debug.plat  fs_final_test.plat  fs_min.plat  fs_test.plat  fs_test_final.plat  fs_working.plat  fs_write_test.plat  function_call_interpolation.plat  function_test.plat  functions.plat  generic_function_syntax.plat  generic_function_test.plat  hello.plat  hello_interpolation.plat  i64_array_test.plat  interpolation_showcase.plat  list_test.plat  (+43 more)
stdlib/std/: hello.plat  io.plat  json.plat  net.plat  test.plat
test_modules/: alias_vs_newtype.plat  exit_code_test.plat  main.plat  math.plat  newtype_cross_check.plat  newtype_demo.plat  newtype_distinct.plat  newtype_safety.plat  newtype_test.plat  simple_newtype.plat
tests/: gc_bench.plat  gc_profiling.plat  gc_stress.plat  gc_test.plat  string_concat_test.plat
tests/modules/: README.md  main.plat  simple_module.plat  utils.plat
tests/modules/multimodule/: main.plat  math.plat
