[package]
name = "plat-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
cranelift-codegen.workspace = true
cranelift-module.workspace = true
cranelift-object.workspace = true
target-lexicon.workspace = true
plat-hir = { path = "../plat-hir" }
plat-ast = { path = "../plat-ast" }
plat-runtime = { path = "../plat-runtime" }

[dev-dependencies]
tempfile.workspace = true