[package]
name = "plat-fmt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
regex.workspace = true
plat-lexer = { path = "../plat-lexer" }
plat-parser = { path = "../plat-parser" }
plat-ast = { path = "../plat-ast" }
plat-diags = { path = "../plat-diags" }

[dev-dependencies]
insta.workspace = true