[package]
name = "plat-hir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
plat-ast = { path = "../plat-ast" }
plat-diags = { path = "../plat-diags" }
plat-modules = { path = "../plat-modules" }

[dev-dependencies]
insta.workspace = true
plat-parser = { path = "../plat-parser" }