[package]
name = "plat-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "plat_runtime"
crate-type = ["cdylib", "rlib"]

[dependencies]
gc.workspace = true

[build-dependencies]
# For linking with system libgc