[package]
name = "plat-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "plat_runtime"
crate-type = ["cdylib", "rlib"]

[dependencies]
gc.workspace = true
lazy_static = "1.4"
crossbeam-deque = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"
num_cpus = "1.16"

[build-dependencies]
# For linking with system libgc